# SDL-Game

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SDL-Game.sln
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters
Engine/src/Engine/Core/: Core.h  Functions.h  Types.h
Engine/src/Engine/Core/Events/: EventSystem.cpp  EventSystem.h
Engine/src/Engine/Core/Input/: InputSystem.cpp  InputSystem.h
Engine/src/Engine/Core/Logging/: Log.cpp  Log.h
Engine/src/Engine/Core/Math/: Math.cpp  Math.h  Vector2D.h
Engine/src/Engine/Core/Renderer/: Renderer.cpp  Renderer.h
Game/: CMakeLists.txt
Game/src/: Main.cpp
Game/src/Game/: Game.h
SDL-Game/: CMakeLists.txt  SDL-Game.vcxproj  SDL-Game.vcxproj.filters
SDL-Game/src/: DataTypes.h  Entity.cpp  Entity.h  EventManager.cpp  EventManager.h  Game.cpp  Game.h  GameRenderer.cpp  GameRenderer.h  InputManager.cpp  InputManager.h  Main.cpp  MinimalMath.cpp  Player.cpp  Player.h  Scene.cpp  Scene.h  Vector2.cpp  Vector2.h
SDL-Game/src/Core/: Box2DTypes.h  Core.h  DataTypes.h  Entity.cpp  Entity.h  Functions.h  Game.cpp  Game.h  Logger.cpp  Logger.h  PhysicsEntity.cpp  PhysicsEntity.h  SDLTypes.h  Scene.cpp  Scene.h
SDL-Game/src/Core/Events/: EventListener.h  EventManager.cpp  EventManager.h  InputManager.cpp  InputManager.h
SDL-Game/src/Core/Events/Input/: InputManager.cpp  InputManager.h
SDL-Game/src/Core/Math/: BoxCollider2D.cpp  BoxCollider2D.h  MinimalMath.cpp  Vector2D.h
SDL-Game/src/Core/Rendering/: GameRenderer.cpp  GameRenderer.h  Renderable.h
SDL-Game/src/Events/: EventListener.h  EventManager.cpp  EventManager.h  InputListener.h  InputManager.cpp  InputManager.h
SDL-Game/src/Game/: Entity.cpp  Entity.h  Game.cpp  Game.h  PhysicsEntity.cpp  PhysicsEntity.h  Scene.cpp  Scene.h
SDL-Game/src/Math/: MinimalMath.h  Vector2.h
SDL-Game/src/Rendering/: GameRenderer.cpp  GameRenderer.h
bin-int/Debug-x64/SDL-Game/: SDL-Game.exe.recipe  SDL-Game.ilk  vc143.idb
bin-int/Debug-x64/SDL-Game/SDL-Game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SDL-Game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
